# C-MiniWebserver

./: CMakeLists.txt
logging/: CMakeLists.txt  README.md
logging/include/: Logger.h
logging/src/: Logger.cpp  testapp.cpp
src/: MiniServer.cpp
